# Capstone_2026

./: CMakeLists.txt  Command Line Prompts  Documentation  README.md  Testing validation scope  bbapp.cpp
html/: Capstone.html  index.html  style.css
powershell/: bitlocker_status.ps1  defender_status.ps1  local_admins.ps1  query_firewall.ps1  query_smvb.ps1  rdp_config.ps1  rremote_enabled.ps1  uac_status_check.ps1
python/: report_generator.py  scanner.py
